remove reading folder notebooks

--- a/notebooks/Bias_grid-30arcsec - with memory mapped file.ipynb
+++ b/notebooks/Bias_grid-30arcsec - with memory mapped file.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -461,7 +461,7 @@
        "4  Haplochromis elegans  2006.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,21 +490,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "x_min, y_min, x_max, y_max = -180, -90, 180, 90\n",
-    "pixel_size = 0.0083333333\n",
+    "pixel_size = 0.083333333 # 0.0083333333\n",
     "x_res = int((x_max - x_min) / pixel_size)\n",
     "y_res = int((y_max - y_min) / pixel_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -512,10 +512,10 @@
     {
      "data": {
       "text/plain": [
-       "43200"
+       "4320"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -534,10 +534,10 @@
     {
      "data": {
       "text/plain": [
-       "21600"
+       "2160"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,23 +550,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use a memory-mapped biasgrid file to prevent the RAM from exploding."
+    "We will use a memory-mapped biasgrid file to prevent the RAM from exploding. At least while results are computed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "bias_grid_mm = np.memmap(\"../data/bias_grid/bias_grid_mm.dat\", dtype='int32', mode='w+', shape=(y_res,x_res))"
+    "bias_grid_mm = np.memmap(\"../data/bias_grid/bias_grid_mm_5arcmin.dat\", dtype='int32', mode='w+', shape=(y_res,x_res))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -579,18 +579,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "here = final_observations.geometry.apply(lambda row: increase_pixel(row)) # keeps the memory usage stable, but kinda slower"
+    "here = final_observations.geometry.apply(lambda row: increase_pixel(row)) # keeps the memory usage stable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -598,10 +598,10 @@
     {
      "data": {
       "text/plain": [
-       "memmap(42848, dtype=int32)"
+       "memmap(42918, dtype=int32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,12 +629,12 @@
     }
    ],
    "source": [
-    "bias_grid_mm.std() # sh*t this still eats memory (uses intermediate datastructures, of course)"
+    "bias_grid_mm.std() # this still eats memory (uses intermediate datastructures, of course)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -645,7 +645,7 @@
        "memmap(1939676)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -667,18 +667,19 @@
        "memmap(True, dtype=bool)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# check if the number of all observations is equal to the bias_grid sum of observations\n",
     "bias_grid_mm.sum() == final_observations.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -711,9 +712,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -722,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -733,13 +734,120 @@
        "memmap(1939676)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bias_grid_mm.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gc\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Store as a TIF raster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import rasterio\n",
+    "from rasterio.transform import Affine\n",
+    "transform = Affine.translation(x_min, y_max) * Affine.scale(pixel_size, -pixel_size)\n",
+    "crs = {'init': \"EPSG:4326\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Affine(0.083333333, 0.0, -180.0,\n",
+       "       0.0, -0.083333333, 90.0)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with rasterio.open(\"../data/bias_grid/bias_grid_5arcmin.tif\", 'w', driver='GTiff', width=x_res, height=y_res,\n",
+    "                   count=1,\n",
+    "                   dtype=np.uint32,\n",
+    "                   nodata=0,\n",
+    "                   transform=transform,\n",
+    "                   crs=crs) as out:\n",
+    "    out.write(bias_grid_mm.astype(np.uint32), indexes=1)\n",
+    "    out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2160, 4320)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bias_grid_mm.shape"
    ]
   },
   {
