--- a/notebooks/Freshwater_Ecoregions_vs_Bias_grid.ipynb
+++ b/notebooks/Freshwater_Ecoregions_vs_Bias_grid.ipynb
@@ -473,6 +473,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 240,
    "metadata": {
     "collapsed": false
